--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://devlutfor:oafdXJhX0g37cwpM@cluster0.i6g0x7t.mongodb.net/task-management-system?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=heramerndeveloper
+NEXT_PUBLIC_API_BASE_URL="https://task-manager-hera.vercel.app"
